--- a/weather.html
+++ b/weather.html
@@ -19,10 +19,12 @@
             <div>
                 <select id="city">
                     <option value="30.428246158444956, -9.59369220759621">Agadir, MAR</option>
+                    <option value="30.288250690826093, -9.45062841339343">Lqliia, MAR</option>
                     <option value="40.71025519641053, -74.00964203533962">New York, USA</option>
                     <option value="40.41117876780771, -3.7076692919264014">Madrid, ESP</option>
                     <option value="48.85873742558746, 2.3360658900206035">Paris, FRA</option>
                     <option value="48.856478593269, 2.342932344757781">London, ENG</option>
+                    <option value="35.75655284177667, 139.9030024179947">Tokyo, JPN</option>
                 </select>
                 <h1 id="day">...</h1>
             </div>
